--- a/css/table.css
+++ b/css/table.css
@@ -1,25 +1,23 @@
 .table-container {
-	align-items: center;
+	/* align-items: center; */
     margin: 1rem auto;
     width: 100%;
-    overflow-x: scroll;
+    /* overflow-x: scroll; */
+    padding: 0 2%;
 	/* margin-left: 100px;  */
     /* margin-right: 100px;  */
 }
 
 
 .table_header {
-    /* width: 100%; */
-    /* height: 10%; */
-    /* padding: .5rem; */
-
-    /* display: flex; */
+    width: 100%;
+    height: 10%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    display: flex;
     justify-content: space-between;
+    align-items: center;
     font-size: 20px;
-    margin: 0.5rem 2rem 1rem;
-    width: inherit;
-    /* justify-content: center; */
-    align-items: left;
 }
 
 
@@ -29,8 +27,8 @@
     background-color: #fffb;
     margin: 5px auto;
     border-radius: .6rem;
-    /* overflow: auto;
-    overflow: overlay; */
+    overflow: auto;
+    /* overflow: overlay; */
 }
 
 
@@ -61,8 +59,8 @@ table, th, td {
     padding: 1rem;
     text-align: left;
     margin: auto;
-    max-width: 200px;
-    overflow: hidden;
+    max-width: 100%;
+    overflow: auto;
     text-overflow: ellipsis;
     position: sticky;
     /* width: 200vw; */
@@ -143,15 +141,7 @@ thead th.active,tbody td.active {
     color: var(--secondary-color);
 }
 
-.table_header {
-    width: 100%;
-    height: 10%;
-    margin-top: 10px;
-    margin-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
+
 
 .table_header .input-group:hover {
     width: 45%;
